--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,7 +141,7 @@ jobs:
       # Only needed for functional tests.
       - name: Downgrade pywin32 for functional tests on Windows + Python 3.6
         run: python -m pip install --upgrade pywin32==224
-        if: matrix.tests == 'functional' && matrix.os == windows-latest && matrix.python == 3.6
+        if: matrix.tests == 'functional' && matrix.os == 'windows-latest' && matrix.python == 3.6
 
       # Run TypeScript unit tests only for Python 3.7
       - name: Run TypeScript unit tests
