--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,7 +170,7 @@ jobs:
         # python: [3.6, 3.7]
         python: [3.7]
         os: [ubuntu-latest]
-        tests: [single-workspace, multi-workspace, debugger]
+        tests: [functional]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -253,22 +253,22 @@ jobs:
       #   run: todo
       #   if: matrix.tests == 'venv'
 
-      - name: Run single-workspace tests
-        uses: GabrielBB/xvfb-action@v1.0
-        with:
-          run: npm run testSingleWorkspace
-        if: matrix.tests == 'single-workspace'
+      # - name: Run single-workspace tests
+      #   uses: GabrielBB/xvfb-action@v1.0
+      #   with:
+      #     run: npm run testSingleWorkspace
+      #   if: matrix.tests == 'single-workspace'
 
-      - name: Run multi-workspace tests
-        uses: GabrielBB/xvfb-action@v1.0
-        with:
-          run: npm run testMultiWorkspace
-        if: matrix.tests == 'multi-workspace'
+      # - name: Run multi-workspace tests
+      #   uses: GabrielBB/xvfb-action@v1.0
+      #   with:
+      #     run: npm run testMultiWorkspace
+      #   if: matrix.tests == 'multi-workspace'
 
-      - name: Run debugger tests
-        run: npm run testDebugger
-        if: matrix.tests == 'debugger'
+      # - name: Run debugger tests
+      #   run: npm run testDebugger
+      #   if: matrix.tests == 'debugger'
 
-      # - name: Run functional tests
-      #   run: npm run test:functional
-      #   if: matrix.tests == 'functional'
+      - name: Run functional tests
+        run: npm run test:functional
+        if: matrix.tests == 'functional'
