--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -210,8 +210,7 @@ jobs:
 
       - name: Retrieve cached pythonFiles/ directory
         uses: actions/cache@v1
-        # Use an id for this step to be able to access the cache-hit key in the next 2 steps, and check whether we need to install extension requirements or not.
-        id: python-cache
+        id: pythonFiles-cache
         with:
           path: ./pythonFiles/lib/python
           key: ${{runner.os}}-${{env.CACHE_PYTHONFILES}}-python-${{env.PYTHON_VERSION}}-${{hashFiles('**/**-requirements.txt')}}
@@ -221,13 +220,13 @@ jobs:
           python -m pip --disable-pip-version-check install -t ./pythonFiles/lib/python --no-cache-dir --implementation py --no-deps --upgrade -r requirements.txt
           python -m pip --disable-pip-version-check install -t ./pythonFiles/lib/python/old_ptvsd --no-cache-dir --implementation py --no-deps --upgrade 'ptvsd==4.3.2'
           python -m pip --disable-pip-version-check install -t ./pythonFiles/lib/python/new_ptvsd/no_wheels --no-cache-dir --implementation py --no-deps --upgrade --pre ptvsd
-        if: steps.python-cache.outputs.cache-hit == false
+        if: steps.pythonFiles-cache.outputs.cache-hit == false
 
       - name: Install ptvsd wheels if not cached
         run: |
           python -m pip --disable-pip-version-check install -r build/debugger-install-requirements.txt
           python ./pythonFiles/install_ptvsd.py
-        if: steps.python-cache.outputs.cache-hit == false
+        if: steps.pythonFiles-cache.outputs.cache-hit == false
 
       - name: Install test requirements
         run: python -m pip install --upgrade -r build/test-requirements.txt
