--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,7 +178,7 @@ jobs:
         python: [3.7]
         os: [ubuntu-latest]
         # tests: [unit, python-unit, ipython, venv, single-workspace, multi-workspace, debugger, functional]
-        tests: [single-workspace]
+        tests: [multi-workspace]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
