--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       # TODO: replace the current test branch with master
       # - master
-      - gh-action-ci-tests
+      - gh-action-venv
 
 env:
   PYTHON_VERSION: 3.8
@@ -128,42 +128,41 @@ jobs:
           python -m black . --check
         working-directory: pythonFiles
 
-        # TODO: uncomment this job when PR is ready for review
-  # build-vsix:
-  #   name: Build VSIX
-  #   runs-on: ubuntu-latest
-  #   needs: [python-deps, js-ts-deps]
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
+  build-vsix:
+    name: Build VSIX
+    runs-on: ubuntu-latest
+    needs: [python-deps, js-ts-deps]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-  #     - name: Retrieve cached npm files
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: ~/.npm
-  #         key: ${{runner.os}}-${{env.CACHE_NPM_DEPS}}-${{hashFiles('package-lock.json')}}
+      - name: Retrieve cached npm files
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{runner.os}}-${{env.CACHE_NPM_DEPS}}-${{hashFiles('package-lock.json')}}
 
-  #     - name: curl PyPI to get ptvsd versions
-  #       run: curl --output ptvsd.json https://pypi.org/pypi/ptvsd/json
+      - name: curl PyPI to get ptvsd versions
+        run: curl --output ptvsd.json https://pypi.org/pypi/ptvsd/json
 
-  #     - name: Retrieve cached pythonFiles/ directory
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: ./pythonFiles/lib/python
-  #         key: ${{runner.os}}-${{env.CACHE_PYTHONFILES}}-python-${{env.PYTHON_VERSION}}-${{hashFiles('requirements.txt')}}-${{hashFiles('build/**-requirements.txt')}}-${{hashFiles('ptvsd.json')}}
+      - name: Retrieve cached pythonFiles/ directory
+        uses: actions/cache@v1
+        with:
+          path: ./pythonFiles/lib/python
+          key: ${{runner.os}}-${{env.CACHE_PYTHONFILES}}-python-${{env.PYTHON_VERSION}}-${{hashFiles('requirements.txt')}}-${{hashFiles('build/**-requirements.txt')}}-${{hashFiles('ptvsd.json')}}
 
-  #     - name: Install dependencies (npm ci)
-  #       run: npm ci --prefer-offline
+      - name: Install dependencies (npm ci)
+        run: npm ci --prefer-offline
 
-  #     - name: Clean directory
-  #       run: npm run clean
+      - name: Clean directory
+        run: npm run clean
 
-  #     - name: Package the VSIX
-  #       run: npm run package
-  #     - uses: actions/upload-artifact@v1
-  #       with:
-  #         name: ${{env.ARTIFACT_NAME_VSIX}}
-  #         path: ms-python-insiders.vsix
+      - name: Package the VSIX
+        run: npm run package
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ${{env.ARTIFACT_NAME_VSIX}}
+          path: ms-python-insiders.vsix
 
   ### Non-smoke tests
   tests:
@@ -175,11 +174,11 @@ jobs:
       matrix:
         # TODO: clean the matrix up when the PR is ready for review
         # os: [ubuntu-latest, macos-latest, windows-latest]
-        # python: [3.6, 3.7]
+        # python: [2.7, 3.8]
         python: [3.7]
         os: [ubuntu-latest]
-        # tests: [unit, python-unit, ipython, venv, single-workspace, multi-workspace, debugger, functional]
-        tests: [debugger]
+        # tests: [ts-unit, python-unit, venv, single-workspace, multi-workspace, debugger, functional]
+        tests: [venv]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -240,7 +239,7 @@ jobs:
         run: |
           python -m pip install numpy
           python -m pip install --upgrade -r ./build/ipython-test-requirements.txt
-        if: matrix.tests == 'ipython'
+        if: matrix.tests == 'python-unit'
 
       - name: Install functional test requirements
         run: |
@@ -248,29 +247,75 @@ jobs:
           python -m pip install --upgrade -r ./build/functional-test-requirements.txt
         if: matrix.tests == 'functional'
 
-      # Downgrade pywin32 on Windows because of a bug https://github.com/jupyter/notebook/issues/4909.
-      # Only needed for functional tests.
-      - name: Downgrade pywin32 for functional tests on Windows + Python 3.6
-        run: python -m pip install --upgrade pywin32==224
-        if: matrix.tests == 'functional' && matrix.os == 'windows-latest' && matrix.python == 3.6
+      - name: Prepare environment for venv tests
+        env:
+          TEST_FILES_SUFFIX: testvirtualenvs
+          PYTHON_VIRTUAL_ENVS_LOCATION: './src/tmp/envPaths.json'
+        run: |
+          # venv/bin or venv\\Scripts (windows)?
+          $environmentExecutableFolder = 'bin'
+          if ('${{runner.os}}' -match 'windows-latest') {
+            $environmentExecutableFolder = 'Scripts'
+          }
 
-      # Run TypeScript unit tests only for Python 3.7
+          # pipenv
+          python -m pip install pipenv
+          python -m pipenv run python build/ci/addEnvPath.py ${{env.PYTHON_VIRTUAL_ENVS_LOCATION}} pipenvPath
+
+          # venv
+          # what happens when running under Python 2.7?
+          python -m venv .venv
+          & ".venv/$environmentExecutableFolder/python" ./build/ci/addEnvPath.py ${{env.PYTHON_VIRTUAL_ENVS_LOCATION}} venvPath
+
+          # virtualenv
+          python -m pip install virtualenv
+          python -m virtualenv .virtualenv
+          & ".virtualenv/$environmentExecutableFolder/python" ./build/ci/addEnvPath.py ${{env.PYTHON_VIRTUAL_ENVS_LOCATION}} virtualEnvPath
+
+          # conda
+
+          # 1. For `terminalActivation.testvirtualenvs.test.ts`
+
+          $condaExecPath = Join-Path -Path $Env:CONDA -ChildPath $environmentExecutableFolder | Join-Path -ChildPath conda
+          if ('${{runner.os}}' -match 'windows-latest') {
+              $condaPythonPath = Join-Path -Path $Env:CONDA -ChildPath python
+          } else{
+              $condaPythonPath = Join-Path -Path $Env:CONDA -ChildPath $environmentExecutableFolder | Join-Path -ChildPath python
+              & $condaPythonPath ./build/ci/addEnvPath.py ${{env.PYTHON_VIRTUAL_ENVS_LOCATION}} condaExecPath $condaExecPath
+          }
+          & $condaPythonPath ./build/ci/addEnvPath.py ${{env.PYTHON_VIRTUAL_ENVS_LOCATION}} condaPath
+
+          # 2. For `interpreterLocatorService.testvirtualenvs.ts`
+
+          & $condaExecPath create -n "test_env1" -y python
+          & $condaExecPath create -p "./test_env2" -y python
+          & $condaExecPath create -p "$Env:HOME/test_env3" -y python
+        shell: pwsh
+        if: matrix.tests == 'venv'
+
+      # Run TypeScript unit tests only for Python 3.X
       - name: Run TypeScript unit tests
         run: npm run test:unittests:cover
-        if: matrix.tests == 'unit' && matrix.python == 3.7
-
-      - name: Run Python unit tests
-        run: python pythonFiles/tests/run_all.py --color=no --junit-xml=${{env.TEST_RESULTS_DIRECTORY}}/python-tests-junit.xml
-        if: matrix.tests == 'python-unit'
+        if: matrix.tests == 'ts-unit' && startsWith(matrix.python, 3.)
 
       # Run the Python IPython tests in our codebase.
-      # Produces a JUnit-style log file that will be uploaded after all tests are complete.
-      - name: Run IPython unit tests
-        run: python -m IPython pythonFiles/tests/run_all.py -- --color=no --junit-xml=${{env.TEST_RESULTS_DIRECTORY}}/ipython-tests-junit.xml
-        if: matrix.tests == 'ipython'
+      # Produce JUnit-style log files that will be uploaded after all tests are complete.
+      - name: Run Python and IPython unit tests
+        run: |
+          python pythonFiles/tests/run_all.py --color=no --junit-xml=${{env.TEST_RESULTS_DIRECTORY}}/python-tests-junit.xml
+          python -m IPython pythonFiles/tests/run_all.py -- --color=no --junit-xml=${{env.TEST_RESULTS_DIRECTORY}}/ipython-tests-junit.xml
+        if: matrix.tests == 'python-unit'
 
+      # Run the virtual environment based tests.
+      # This set of tests is simply using the `testSingleWorkspace` set of tests
+      # with the environment variable `TEST_FILES_SUFFIX` set to `testvirtualenvs`, which
+      # is set in the "Prepare environment for venv tests" step.
+      # Use a third-party GitHub Action to install xvfb on Linux, run tests and then clean up the process once the tests ran.
+      # See https://github.com/GabrielBB/xvfb-action
       # - name: Run venv tests
-      #   run: todo
+      #   uses: GabrielBB/xvfb-action@v1.0
+      #   with:
+      #     run: npm run testSingleWorkspace
       #   if: matrix.tests == 'venv'
 
       - name: Run single-workspace tests
