--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,6 +159,7 @@ jobs:
 
       - name: Package the VSIX
         run: npm run package
+
       - uses: actions/upload-artifact@v1
         with:
           name: ${{env.ARTIFACT_NAME_VSIX}}
@@ -177,8 +178,7 @@ jobs:
         # python: [2.7, 3.8]
         python: [3.7]
         os: [ubuntu-latest]
-        # tests: [ts-unit, python-unit, venv, single-workspace, multi-workspace, debugger, functional]
-        tests: [venv]
+        tests: [ts-unit, python-unit, venv, single-workspace, multi-workspace, debugger, functional]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -214,6 +214,7 @@ jobs:
 
       - name: Retrieve cached pythonFiles/ directory
         uses: actions/cache@v1
+        # Use an id for this step so that its cache-hit output can be accessed and checked in the next step.
         id: pythonFiles-cache
         with:
           path: ./pythonFiles/lib/python
