--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -187,7 +187,7 @@
                 "--ui=tdd",
                 "--recursive",
                 "--colors",
-                "--grep", "Edit/delete cells",
+                //"--grep", "<suite name>",
                 "--timeout=300000"
             ],
             "outFiles": [
