--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,7 +177,8 @@ jobs:
     needs: [python-deps, js-ts-deps]
     strategy:
       matrix:
-        # We're not running CI on macOS for now because we assume that Ubuntu is enough to cover the Unix case.
+        # We're not running CI on macOS for now because it's one less matrix entry to lower the number of runners used,
+        # macOS runners are expensive, and we assume that Ubuntu is enough to cover the UNIX case.
         os: [ubuntu-latest, windows-latest]
         # Run the tests on the oldest and most recent versions of Python.
         python: [2.7, 3.8]
